[package]
authors = ["Pana <pana.wang@outlook.com>"]
edition = "2018"
name = "reqwest-jsonrpc"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.114", features = ["derive"]}
jsonrpc-core = "14.2.0"
rlp = "0.4.0"
cfx-types = {path = "/Users/pana/Projects/conflux/conflux-rust/cfx_types"}
cfx-bytes = {path = "/Users/pana/Projects/conflux/conflux-rust/cfx_bytes"}
client = {path = "/Users/pana/Projects/conflux/conflux-rust/client"}
primitives = {path = "/Users/pana/Projects/conflux/conflux-rust/primitives"}
cfxkey = {path = "/Users/pana/Projects/conflux/conflux-rust/accounts/cfxkey"}
hex = "0.4.2"